add assignment operators

--- a/programming/golang/operators/assignment.html
+++ b/programming/golang/operators/assignment.html
@@ -5,3 +5,28 @@ layout: golang
 ---
 
 <h1>Go Assignment Operators</h1>
+
+<section>
+    <h2>What are Assignment Operators?</h2>
+    <p>Assignment operators are used to assign variables to values.</p>
+</section>
+
+<section>
+    <h2>The Assignment Operator (<code>=</code>)</h2>
+    <p>The equal sign thats we are all familiar with is called the assignment operator, because it is the most important out of all the assignment operators. All the other assignment operators are built off of it. For example, the below code assigns the variable <code>a</code> the value of 3, the constant <code>pi</code> the value of 3.14, and the variable <code>website</code>  the value of Learnmonkey:</p>
+    <pre><code class="language-go">
+var a = 3
+const pi = 3.14
+var website = "Learnmonkey"
+    </code></pre>
+    <p>Notice that we can use the assignment operator to make constants and variables. We can also use the assignment operator to set variables (not constants) once they are already created:</p>
+    <pre><code class="language-go">
+a = 4
+website = "go.dev"
+    </code></pre>
+</section>
+
+<section>
+    <h2>Other Assignment Operators</h2>
+    <p>The other assignment operators were created so that as developers, our lives would be easier.</p>
+</section>
