add stuff to go operators

--- a/programming/golang/operators/assignment.html
+++ b/programming/golang/operators/assignment.html
@@ -28,5 +28,5 @@ website = "go.dev"
 
 <section>
     <h2>Other Assignment Operators</h2>
-    <p>The other assignment operators were created so that as developers, our lives would be easier.</p>
+    <p>The other assignment operators were created so that as developers, our lives would be easier. They are all equivalent to using the assignment operator in some way:</p>
 </section>
