--- a/programming/golang/operators/bitwise.html
+++ b/programming/golang/operators/bitwise.html
@@ -5,3 +5,8 @@ layout: golang
 ---
 
 <h1>Go Bitwise Operators</h1>
+
+<section>
+    <h2>What are Bitwise Operators?</h2>
+    <p>Bitwise operators are operators that act on binary numbers.</p>
+</section>
