go logical and + or

--- a/programming/golang/operators/logical.html
+++ b/programming/golang/operators/logical.html
@@ -5,3 +5,18 @@ layout: golang
 ---
 
 <h1>Go Logical Operators</h1>
+
+<section>
+    <h2>What are Logical Operators?</h2>
+    <p>Logical operators are operators that act on booleans (i.e. true and false)</p>
+</section>
+
+<section>
+    <h2>Logical And (<code>&&</code>)</h2>
+    <p>The logical and returns true only if both booleans are true. The symbol for the logical and operator is two ampersands: <code>&&</code>. For example, <code>true && false</code> gives false and <code>true && true</code> gives true.</p>
+</section>
+
+<section>
+    <h2>Logical Or (<code>||</code>)</h2>
+    <p>The logical or returns true if one of the two booleans returns true. The symbol for the logical or operator is <code>||</code>. For example. <code>true || false</code> gives true and <code>true || true</code> give true, but <code>false || false</code> gives false.</p>
+</section>
