--- a/programming/golang/operators/logical.html
+++ b/programming/golang/operators/logical.html
@@ -20,3 +20,8 @@ layout: golang
     <h2>Logical Or (<code>||</code>)</h2>
     <p>The logical or returns true if one of the two booleans returns true. The symbol for the logical or operator is <code>||</code>. For example. <code>true || false</code> gives true and <code>true || true</code> give true, but <code>false || false</code> gives false.</p>
 </section>
+
+<section>
+    <h2>Logical Not (<code>!</code>)</h2>
+    <p>The logical not simply returns the opposite of the given boolean. We use it like this: <code>![boolean]</code>. <code>!true</code> returns false and <code>!false</code> returns true.</p>
+</section>
