what are go comparison operators

--- a/programming/golang/operators/comparison.html
+++ b/programming/golang/operators/comparison.html
@@ -5,3 +5,16 @@ layout: golang
 ---
 
 <h1>Go Comparison Operators</h1>
+
+<section>
+    <h2>What are Comparison Operators?</h2>
+    <p>Comparison operators compare two variables or values and return a boolean.</p>
+</section>
+
+<section>
+    <h2>Equal To (<code>==</code>)</h2>
+</section>
+
+<section>
+    <h2>Not Equal To (<code>!=</code>)</h2>
+</section>
