add quick sentence

--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -46,9 +46,10 @@ fmt.Println(len(my_array))
 
 <section>
     <h2>Arrays inside of Arrays</h2>
-    <p>We can put arrays inside of arrays, as we can do with any other data type, but the code looks a little messier:</p>
+    <p>We can put arrays inside of arrays, as we can do with any other data type, but the code is messier:</p>
     <pre><code class="language-go">
 array1 := [][]int{[]int{1,2,3},[]int{1,2,3}}
 array2 := [][]int{{1,2,3},{1,2,3}} // slightly less messier version
     </code></pre>
+    <p>A nested array like this could represent a table or a matrix.</p>
 </section>
