Go append element to slice

--- a/programming/golang/slices.html
+++ b/programming/golang/slices.html
@@ -29,4 +29,12 @@ layout: golang
 
 <section>
     <h2>Appending an Element to a Slice</h2>
+    <p>The <code>append</code> function is used to append elements to a slice:</p>
+    <pre><code class="language-go">
+slice_name = append(slice_name, element1, element2, ...)
+    </code></pre>
+</section>
+
+<section>
+    <h2>Appending a Slice to a Slice</h2>
 </section>
