fix curly braces so that github pages won't crash

--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -49,7 +49,7 @@ fmt.Println(len(my_array))
     <p>We can put arrays inside of arrays, as we can do with any other data type, but the code is messier:</p>
     <pre><code class="language-go">
 array1 := [][]int{[]int{1,2,3},[]int{1,2,3}}
-array2 := [][]int{{1,2,3},{1,2,3}} // slightly less messier version
+array2 := [][]int&lcub;&lcub;1,2,3},{1,2,3}} // slightly less messier version
     </code></pre>
     <p>A nested array like this could represent a table or a matrix.</p>
 </section>
