--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -20,7 +20,7 @@ var array_name = [length]datatype{values} // explicitly setting the array length
 var array_name = [...]datatype{values} // array's length will be inferred, also, don't forget the ...!
     </code></pre>
     <p>You replace <code>array_name</code> with the name of your array variable, <code>length</code> with the length of your array, replace <code>datatype</code> with the data type of your array, and replace <code>values</code> with your values seperated by commas.</p>
-    <small><i class="fas fa-exclamation-circle"></i>Remember: You <strong>cannot</strong> have more elements than the length of your array!</small>
+    <small><i class="fas fa-exclamation-circle"></i>Remember: You <strong>cannot</strong> have more elements than the length of your array!</small><br>
     <small><i class="fas fa-exclamation-circle"></i>Remember: You <strong>cannot</strong> have elements of different data types than the array data type!</small>
     <p>You can also you the short declare operator (<code>:=</code>):</p>
     <pre><code class="language-go">
