--- a/programming/golang/slices.html
+++ b/programming/golang/slices.html
@@ -39,7 +39,8 @@ slice_name = append(slice_name, element1, element2, ...)
     <h2>Appending a Slice to a Slice</h2>
     <p>Appending a slice to a slice also uses the <code>append</code> function:</p>
     <pre><code class="language-go">
-slice3 = append(slice1, slice2...)
+slice3 = append(slice1, slice2...) // you can add as many slices as you want, but you need the three periods at the end!
     </code></pre>
+    <p>In the above example, we are appending the <code>slice1</code> and <code>slice2</code> slices to the <code>slice3</code> slice.</p>
     <small><i class="fas fa-exclamation-circle"></i>The <code>...</code> is required! If you don't add it, Go will think that you are adding the slices as elements.</small>
 </section>
