--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -16,7 +16,7 @@ layout: golang
     <p>A string is some text. If that's hard to remember, think of text as characters strung together on a string. In Go, strings are wrapped in double quotes. If we don't do that, Go will think that we are referring to a variable and we'll get an error.</p>
     <p>Below is an example of making a string variable: </p>
     <pre><code class="language-go">
-var websiteName = "Learnmonkey"
+var websiteName string = "Learnmonkey"
     </code></pre>
 </section>
 
