Add more data types examples

--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -26,6 +26,7 @@ var websiteName string = "Learnmonkey"
     <p>Below is an example of making an integer variable: </p>
     <pre><code class="language-go">
 var numberOfStudents int = 27
+var revenue = -100
     </code></pre>
 </section>
 
@@ -46,5 +47,6 @@ var isEmpty bool = false
     <pre><code class="language-go">
 const pi float32 = 3.141
 var percentage float64 = 2.4563543
+var bankAccountBalance = -1643.95
     </code></pre>
 </section>
