why use structs section

--- a/programming/golang/structs.html
+++ b/programming/golang/structs.html
@@ -13,6 +13,7 @@ layout: golang
 
 <section>
     <h2>Why use Structs?</h2>
+    <p>Arrays and slices are useful for storing values for the same thing, like the number of students in each class, but arrays and slices are bad for storing values that represent different things. To overcome this issue, we use structs.</p>
 </section>
 
 <section>
