--- a/programming/golang/structs.html
+++ b/programming/golang/structs.html
@@ -8,7 +8,7 @@ layout: golang
 
 <section>
     <h2>What is a Struct?</h2>
-    <p>A struct is a custom data type you create yourself. Structs are composed of properties, each with a built-in data type.</p>
+    <p>Structs (short for structure) are custom data types you create yourself. Structs are composed of properties, each with a built-in data type.</p>
 </section>
 
 <section>
