while loop barebones

--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -1,10 +1,10 @@
 ---
-title: Data Types In Go
+title: Go Data Types
 permalink: /programming/golang/data-types/
 layout: golang
 ---
 
-<h1>Data Types In Go</h1>
+<h1>Go Data Types</h1>
 
 <section>
     <h2>What is a Data Type?</h2>
