--- a/programming/golang/slices.html
+++ b/programming/golang/slices.html
@@ -44,3 +44,15 @@ slice3 = append(slice1, slice2...) // you can add as many slices as you want, bu
     <p>In the above example, we are appending the <code>slice1</code> and <code>slice2</code> slices to the <code>slice3</code> slice.</p>
     <small><i class="fas fa-exclamation-circle"></i>The <code>...</code> is required! If you don't add it, Go will think that you are adding the slices as elements.</small>
 </section>
+
+<section>
+    <h2>Nested Slices</h2>
+    <p>We can put slices inside of slices, just as we could with any other data type. The only difference is that the code is uglier: </p>
+    <pre><code class="language-go">
+a := [][]int{
+    {0, 1, 2, 3},
+    {4, 5, 6, 7},
+}
+    </code></pre>
+    <p>Nested slices can represent tables and matrices.</p>
+</section>
