--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -46,11 +46,13 @@ fmt.Println(len(my_array))
 </section>
 
 <section>
-    <h2>Arrays inside of Arrays</h2>
+    <h2>Nested Arrays</h2>
     <p>We can put arrays inside of arrays, as we can do with any other data type, but the code is messier:</p>
     <pre><code class="language-go">
-array1 := [][]int{[]int{1,2,3},[]int{1,2,3}}
-array2 := [][]int&lcub;&lcub;1,2,3},{1,2,3}} // slightly less messier version
+array2 := [][]int{
+    {1, 2, 3, 4},
+    {5, 6, 7, 8},
+} 
     </code></pre>
     <p>A nested array like this could represent a table or a matrix.</p>
 </section>
