--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -54,5 +54,5 @@ array2 := [][]int{
     {5, 6, 7, 8},
 } 
     </code></pre>
-    <p>A nested array like this could represent a table or a matrix.</p>
+    <p>Nested arrays can represent tables and matrices.</p>
 </section>
