barebones for loops

--- a/programming/golang/for-loop.html
+++ b/programming/golang/for-loop.html
@@ -1,5 +1,25 @@
 ---
 title: Go For Loop
-permalink: /programming/golang/data-types/
+permalink: /programming/golang/for-loop/
 layout: golang
 ---
+
+<h1>Go For Loop</h1>
+
+<section>
+    <h2>What is a Loop?</h2>
+    <p>In programming, we have "loops". So, what are loops? Well, think about a loop as doing the same thing over and over again, like a loop in regular life! Loops can run as many times as you want. Even infinitely!</p>
+</section>
+
+<section>
+    <h2>Why use loops?</h2>
+    <p>Well, as an example, let's say that you want to print <samp>Hello World!</samp> 5 times. We already know that the code for one <samp>Hello World!</samp> is:</p><pre><code class="language-go">fmt.Println("Hello World!")</code></pre>.<p>Sure, you could copy and paste the code 5 times, it's not a lot, but hat if you wanted to print <samp>Hello World!</samp> 1000 times? That's when the power of loops comes in!! Instead of writing 1000 lines of code, we can only write a few!</p>
+</section>
+
+<section>
+	<h2>What is a For Loop?</h2>
+</section>
+
+<section>
+	<h2>Making For Loops in Go</h2>
+</section>
