--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -25,6 +25,17 @@ layout: default
         </ul>
     </li>
     <li><a href="/math/">Math</a>
+        <ul>
+            <li><a href="/math/arithmetic/">Arithmetic</a></li>
+            <li><a href="/math/algebra/">Algebra</a></li>
+            <li><a href="/math/geometry/">Geometry</a>
+                <ul>
+                    <li><a href="/math/geometry/trigonometry/">Trigonometry</a></li>
+                </ul>
+            </li>
+            <li><a href="/math/probability/">Probability</a></li>
+            <li><a href="/math/calculus/">Calculus</a></li>
+        </ul>
     </li>
 </ul>
 
