--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -49,10 +49,14 @@ fmt.Println(len(my_array))
     <h2>Nested Arrays</h2>
     <p>We can put arrays inside of arrays, as we can do with any other data type, but the code is messier:</p>
     <pre><code class="language-go">
-array2 := [][]int{
+array1 := [2][4]int{
     {1, 2, 3, 4},
     {5, 6, 7, 8},
-} 
+}
+array2 := [...][...]int{
+    {1, 2, 3, 4},
+    {5, 6, 7, 8},
+}
     </code></pre>
     <p>Nested arrays can represent tables and matrices.</p>
 </section>
