--- a/programming/golang/slices.html
+++ b/programming/golang/slices.html
@@ -49,7 +49,7 @@ slice3 = append(slice1, slice2...) // you can add as many slices as you want
     <h2>Nested Slices</h2>
     <p>We can put slices inside of slices, just as we could with any other data type. The only difference is that the code is uglier: </p>
     <pre><code class="language-go">
-a := [][]int{
+mySlice := [][]int{
     {0, 1, 2, 3},
     {4, 5, 6, 7},
 }
