--- a/programming/golang/comments.html
+++ b/programming/golang/comments.html
@@ -19,9 +19,13 @@ layout: golang
 // Learnmonkey!</code></pre><br>
     <p>Single-line comments can also go at the end of code like this:</p>
     <pre><code>fmt.Println("Learnmonkey is awesome!") // It's true!</code></pre><br>
+</section>
+
+<section>
+    <h2>Multi-Line Comments</h2>
     <p>We can also make multi-line comments in Go by putting <code>/*</code> in front of the first line of the comment and then putting <code>*/</code> at the end of the multi-line comment. For example, we could have:</p>
     <pre><code class="language-go">/* Some Text Here
-More Text
-Share Learnmonkey With Your Friends!!
-Go Is Great! */</code></pre>
+    More Text
+    Share Learnmonkey With Your Friends!!
+    Go Is Great! */</code></pre>
 </section>
