updating, adding, and deleting go map elements

--- a/programming/golang/maps.html
+++ b/programming/golang/maps.html
@@ -40,3 +40,13 @@ Learnmonkey
 learnmonkey.github.io
     </samp></pre>
 </section>
+
+<section>
+    <h2>Updating and Adding Map Elements</h2>
+    <p>To add and update map elements, we simply type <code class="language-go"><i>map</i>[<i>key</i>] = <i>value</i></code>.</p>
+</section>
+
+<section>
+    <h2>Removing Map Elements</h2>
+    <p>To remove map elements, we use the <code>delete</code> function: <code class="language-go">delete(<i>map</i>, <i>key</i>)</code></p>
+</section>
