check if map element exists go

--- a/programming/golang/maps.html
+++ b/programming/golang/maps.html
@@ -50,3 +50,8 @@ learnmonkey.github.io
     <h2>Removing Map Elements</h2>
     <p>To remove map elements, we use the <code>delete</code> function: <code class="language-go">delete(<i>map</i>, <i>key</i>)</code></p>
 </section>
+
+<section>
+    <h2>Checking if a Map Element Exists</h2><br>
+    <code class="language-go">_, x := <i>map</i>[<i>key</i>]</code>
+</section>
