minor change to section name

--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -55,7 +55,7 @@ Wikipedia
 </section>
 
 <section>
-    <h2>Getting the Length</h2>
+    <h2>Getting the Array Length</h2>
     <p>To get the length of an array, we use the <code>len</code> function. For example: </p>
     <pre><code class="language-go">
 var my_array = [3]int{}
