--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -16,7 +16,11 @@ layout: default
             </li>
             <li><a href="/programming/html/">HTML</a></li>
             <li><a href="/programming/css/">CSS</a></li>
-            <li><a href="/programming/javascript/">JavaScript</a></li>
+            <li><a href="/programming/javascript/">JavaScript</a>
+                <ul>
+                    <li><a href="/programming/javascript/jquery/">JQuery</a></li>
+                </ul>
+            </li>
             <li><a href="/programming/golang/">Go</a></li>
             <li><a href="/programming/cpp/">C++</a></li>
             <li><a href="/programming/java/">Java</a></li>
