--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -39,7 +39,7 @@ array_name := [...]datatype{values} // array's length will be inferred, also, yo
     </code>
     <p>We replace <code><i>array</i></code> with the name of the array variable and <code><i>index</i></code> with the index of the element. For example: </p>
     <pre><code class="language-go">
-websites = ["GitHub", "Wikipedia", "Learnmonkey", "Twitter", "Gmail", "Stack Overflow"]
+websites := [6]string{"GitHub", "Wikipedia", "Learnmonkey", "Twitter", "Gmail", "Stack Overflow"}
 fmt.Println(websites[2])
 fmt.Println(website[5])
 fmt.Println(websites[0])
@@ -62,7 +62,7 @@ Wikipedia
     </code>
     <p>For example: </p>
     <pre><code class="language-go">
-companies = ["Google", "Facebook", "Apple", "Twitter"]
+companies := [4]string{"Google", "Facebook", "Apple", "Twitter"}
 companies[1] = "Microsoft"
 fmt.Println(companies)
     </code></pre>
