--- a/programming/golang/slices.html
+++ b/programming/golang/slices.html
@@ -24,7 +24,18 @@ layout: golang
 </section>
 
 <section>
-    <h2>Changing a Slice Element</h2>
+    <h2>Accessing a Slice Element</h2>
+    <p>To access and set slice elements, we use slice indices. Slice indices start at zero for the first element and the index goes up by one for every element we go. For example, the element with slice index 2 is the third element and the element with slice index 4 is the fifth element.</p>
+    <p>To access slice elements, we type: </p>
+    <code><i>slice</i>[<i>index</i>]</code>
+    <p>We replace <code><i>slice</i></code> with the name of the slice variable and <code><i>index</i></code> with the index of the element. For example:</p>
+    <pre><code class="language-go">
+websites := []string{"GitHub", "Wikipedia", "Learnmonkey", "Twitter", "Gmail", "Stack Overflow"}
+fmt.Println(websites[2])
+fmt.Println(websites[5])
+fmt.Println(websites[0])
+fmt.Println(websites[1])
+    </code></pre>
 </section>
 
 <section>
