Go check if map element exists

--- a/programming/golang/maps.html
+++ b/programming/golang/maps.html
@@ -53,5 +53,7 @@ learnmonkey.github.io
 
 <section>
     <h2>Checking if a Map Element Exists</h2><br>
-    <code class="language-go">_, x := <i>map</i>[<i>key</i>]</code>
+    <p>To check if a map element exists, we type: </p>
+    <code class="language-go">x, y := <i>map</i>[<i>key</i>]</code>
+    <p>In the above code, <code>x</code> represents the value of the value of the corresponding key (which will be empty if that key doesn't exist in the map) and <code>y</code> is a boolean which is true if the key is in the map and is false if the key isn't in the map.</p>
 </section>
