Git repos and commits

--- a/programming/git/index.html
+++ b/programming/git/index.html
@@ -13,11 +13,21 @@ layout: git
 </section>
 
 <section>
+    <h2>Repositories</h2>
+    <p>One of the most important concepts in Git is the <em>repository</em>. The word "repository" means a place where something is stored. In Git, repositories (often shortened to "repos") are where your code (or whatever you're making) is stored.</p>
+</section>
+
+<section>
+    <h2>Commits</h2>
+    <p>Commits are the other very important concept in Git. If you want to change the content of a repository, you need to make a <em>commit</em>. The word "commit" means to do something (usually bad). So, if you want to do something with the repository's content, you need to commit to it.</p>
+</section>
+
+<section>
     <h2>Why use Git?</h2>
     <p>Because practically everyone else uses it. There are other version-control systems out there, like BitKeeper and Mercurial, but they are pretty much non-existent.</p>
 </section>
 
 <section>
     <h2>History</h2>
-    <p>Git was created by Linus Torvalds, who also created Linux, in 2005 because at the time, Linux's version control system was BitKeeper, which was proprietary.</p>
+    <p>Git was created by Linus Torvalds, who also created Linux, in 2005 because at the time, Linux's version control system was BitKeeper, which was proprietary. Git's lead maintainer is curently Junio Hamano.</p>
 </section>
