Expand and reorganize GitHub intro

--- a/programming/git/github.html
+++ b/programming/git/github.html
@@ -8,6 +8,11 @@ layout: git
 
 <section>
     <h2>What is GitHub?</h2>
-    <p>GitHub is a place where you can put your Git repositories. You can put issues and pull requests there. Think of it this way. You have the code you're actually writing and testing on your Git repository, on your computer. Once you're done with your code, you upload it to GitHub.</p>
-    <p>There are GitHub alternatives like GitLab and Bitbucket, but they aren't used as much. We will be using GitHub for this tutorial series.</p>
+    <p>GitHub is a place where you can put your Git repositories. Think of it this way. On your local computer, you have your Git repository. Then, you make a GitHub remote for your local Git repository. That way, all your changes and commits will be reflected on the GitHub repository.</p>
+</section>
+
+<section>
+    <h2>Why use GitHub?</h2>
+    <p>GitHub is great because it allows you to make your code public, so that other people can see it and interact with it through pull requests and issues. If you don't want to make your code public, GitHub also allows private repositories. Even if you don't use GitHub to share your code, it's still a great place to store your code, in case your computer breaks or your house catches fire. Finally, GitHub is great for collaboration.</p>
+    <p>However, most if not all of what I have said applies to other places where you can host your repositories, like GitLab and Bitbucket. However, GitHub is the most popular option. In fact, Learnmonkey uses GitHub.</p>
 </section>
