--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -19,6 +19,9 @@ layout: default
             <li><a href="/programming/javascript/">JavaScript</a>
                 <ul>
                     <li><a href="/programming/javascript/jquery/">JQuery</a></li>
+                    <li><a href="/programming/javascript/react/">React</a></li>
+                    <li><a href="/programming/javascript/angular/">Angular</a></li>
+                    <li><a href="/programming/javascript/vue/">Vue</a></li>
                 </ul>
             </li>
             <li><a href="/programming/golang/">Go</a></li>
