--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -14,17 +14,17 @@ layout: default
                     <li><a href="/programming/python/pygame/">Pygame</a></li>
                 </ul>
             </li>
+            <li><a href="/programming/golang/">Go</a></li>
             <li><a href="/programming/html/">HTML</a></li>
             <li><a href="/programming/css/">CSS</a></li>
             <li><a href="/programming/javascript/">JavaScript</a>
                 <ul>
-                    <li><a href="/programming/javascript/jquery/">JQuery</a></li>
+                    <li><a href="/programming/javascript/jquery/">jQuery</a></li>
                     <li><a href="/programming/javascript/react/">React</a></li>
                     <li><a href="/programming/javascript/angular/">Angular</a></li>
                     <li><a href="/programming/javascript/vue/">Vue</a></li>
                 </ul>
             </li>
-            <li><a href="/programming/golang/">Go</a></li>
             <li><a href="/programming/cpp/">C++</a></li>
             <li><a href="/programming/java/">Java</a></li>
             <li><a href="/programming/git/">Git</a></li>
