--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -12,6 +12,7 @@ layout: default
                 <ul>
                     <li><a href="/programming/python/flask/">Flask</a></li>
                     <li><a href="/programming/python/pygame/">Pygame</a></li>
+                    <li><a href="/programming/python/tkinter/">Tkinter</a></li>
                 </ul>
             </li>
             <li><a href="/programming/golang/">Go</a></li>
