Expand Tkinter intro

--- a/programming/python/tkinter/index.html
+++ b/programming/python/tkinter/index.html
@@ -8,5 +8,6 @@ layout: tkinter
 
 <section>
     <h2>What is Tkinter?</h2>
-    <p>Tkinter is a Python library for making graphical user interfaces. Tkinter is built into the Python standard library. Although the GUIs that Tkinter makes aren't the prettiest, Tkinter is very useful for small projects and prototypes.</p>
+    <p>Tkinter is a Python library for making graphical user interfaces. Tkinter is built into the Python standard library and is platform-independent. Although the GUIs that Tkinter makes aren't the prettiest, Tkinter is very useful for small projects and prototypes. </p>
+    <p>Tkinter is built on the Tk GUI toolkit.</p>
 </section>
