--- a/programming/python/tkinter/index.html
+++ b/programming/python/tkinter/index.html
@@ -11,3 +11,10 @@ layout: tkinter
     <p>Tkinter is a Python library for making graphical user interfaces. Tkinter is built into the Python standard library and is platform-independent. Although the GUIs that Tkinter makes aren't the prettiest, Tkinter is very useful for small projects and prototypes. </p>
     <p>Tkinter is built on the Tk GUI toolkit.</p>
 </section>
+
+<section>
+    <h2>Prerequisites</h2>
+    <ul>
+        <li>Experience with Python</li>
+    </ul>
+</section>
