Rename title of page

--- a/settings.html
+++ b/settings.html
@@ -5,6 +5,6 @@ layout: default
 ---
 
 <section>
-    <h1>Customize Learnmonkey Settings</h1>
+    <h1>Learnmonkey Settings</h1>
     <a onclick="switchDark()" id="toggledarklight">Toggle Dark</a>
 </section>
