--- a/programming/golang/operators/assignment.html
+++ b/programming/golang/operators/assignment.html
@@ -13,7 +13,7 @@ layout: golang
 
 <section>
     <h2>The Assignment Operator (<code>=</code>)</h2>
-    <p>The equal sign thats we are all familiar with is called the assignment operator, because it is the most important out of all the assignment operators. All the other assignment operators are built off of it. For example, the below code assigns the variable <code>a</code> the value of 3, the constant <code>pi</code> the value of 3.14, and the variable <code>website</code>  the value of Learnmonkey:</p>
+    <p>The equal sign that we are all familiar with is called the assignment operator, because it is the most important out of all the assignment operators. All the other assignment operators are built off of it. For example, the below code assigns the variable <code>a</code> the value of 3, the constant <code>pi</code> the value of 3.14, and the variable <code>website</code>  the value of Learnmonkey:</p>
     <pre><code class="language-go">
 var a = 3
 const pi = 3.14
