--- a/programming/python/index.html
+++ b/programming/python/index.html
@@ -29,7 +29,7 @@ title: Introduction to Python
     <p>Python is a general-purpose programming language, so it can be used to <strong>TONS</strong> of different things. Some uses of Python include:</p>
     <ul>
         <li>Websites</li>
-        <li>Dekstop Applications</li>
+        <li>Desktop Applications</li>
         <li>Game Development</li>
         <li>Data Science</li>
         <li>Artificial Intelligence</li>
