finish intro to jquery

--- a/programming/javascript/jquery/index.html
+++ b/programming/javascript/jquery/index.html
@@ -1,14 +1,24 @@
 ---
-title: Introduction to JQuery
+title: Introduction to jQuery
 permalink: /programming/javascript/jquery/
 layout: jquery
 ---
 
-<h1>Introduction to JQuery</h1>
+<h1>Introduction to jQuery</h1>
 
 <section>
-    <h2>What is JQuery?</h2>
-    <p>JQuery is</p>
+    <h2>What is jQuery?</h2>
+    <p>jQuery is a <a href="/programming/javascript/">JavaScript</a> "write less do more" library designed to simplify JavaScript coding through simple methods and HTML DOM manipulation, event handling, CSS animations, and handling AJAX code.</p>
+</section>
+
+<section>
+    <h2>History of jQuery</h2>
+    <p>jQuery was created in 2006 by John Resig as an easy way to write JavaScript code without all the complex methods you need to use.</p>
+</section>
+
+<section>
+    <h2>Why use jQuery</h2>
+    <p>jQuery is, by far, the most popular library with websites using it more often than <a href="/programming/javascript/react/">React</a>, <a href="/programming/javascript/angular/">Angular</a>, and <a href="/programming/javascript/vue/">Vue</a> <b>COMBINED</b>! Some developers do argue that jQuery is dying in popularity but, in fact, more and more websites daily get created using jQuery and if jQuery was to be deleted from the programming world, then <u>TONS</u> of websites would fail to work.</p>
 </section>
 
 <section>
