--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -20,7 +20,7 @@ layout: default
             <li><a href="/programming/css/">CSS</a></li>
             <li><a href="/programming/javascript/">JavaScript</a>
                 <ul>
-                    <li><a href="/programming/javascript/jquery/">JQuery</a></li>
+                    <li><a href="/programming/javascript/jquery/">jQuery</a></li>
                     <li><a href="/programming/javascript/react/">React</a></li>
                     <li><a href="/programming/javascript/angular/">Angular</a></li>
                     <li><a href="/programming/javascript/vue/">Vue</a></li>
